src/cses/mex_grid_construction/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/mex_grid_construction/mex_grid_construction.cpp.
/Users/michael/repos/competitive-programming/src/cses/mex_grid_construction/mex_grid_construction.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
Found compiler error(s).
